--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,12 @@ header nav ul li a {
     font-weight: bold;
 }
 
+header a:hover {
+    text-decoration: none;
+    color: #ebe7e7;
+    font-weight: bold;
+}
+
 /* Section Headers */
 section {
     padding: 2rem 1rem;
@@ -110,12 +116,12 @@ section h2 {
 
 /* Footer */
 footer {
-    background-color: #64a78b;
+    background-color: #5cc096;
     color: #fff;
     text-align: center;
     padding: 0.5rem 1rem;
     font-size: 0.875rem;
-    border-top: 2px solid #559184;
+    border-top: 2px solid #5cc096;
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -125,22 +131,36 @@ footer {
     background-color: #ffffff;
 }
 
-/* Hero Section */
-.hero {
-    background-color: #fff3f3;
-    text-align: center;
+/* Estilos para a seção FAQ */
+.faq-section {
     padding: 2rem 1rem;
-    border-bottom: 2px solid #5cc096;
 }
 
-.hero h2 {
+.faq-section h2 {
     font-size: 2rem;
+    border-bottom: 2px solid #5cc096;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    text-align: center; /* Centraliza o título */
 }
 
-.hero p {
-    font-size: 1.2rem;
+.faq-section h3 {
+    font-size: 1.3rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    text-align: justify;
 }
 
+.faq-section p {
+    text-align: justify; /* Justifica o texto */
+    margin-bottom: 1rem; /* Espaçamento inferior entre parágrafos */
+}
+
+.faq-section p:last-of-type {
+    margin-bottom: 0; /* Remove margem inferior do último parágrafo */
+}
+
+/* Hero Section */
 .btn {
     display: inline-block;
     padding: 0.5rem 1.5rem;
